src/test/ui/object-safety/object-safety-supertrait-mentions-Self.stderr
error[E0038]: the trait `Baz` cannot be made into an object
  --> $DIR/object-safety-supertrait-mentions-Self.rs:15:31
   |
LL | trait Baz : Bar<Self> {
   |       ---   --------- ...because it uses `Self` as a type parameter in this
   |       |
   |       this trait cannot be made into an object...
...
LL | fn make_baz<T:Baz>(t: &T) -> &dyn Baz {
   |                               ^^^^^^^ the trait `Baz` cannot be made into an object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
